# edubot_hardware

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  package.xml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
edubot/src/edubot_demos/.github/workflows/: release.yml
edubot_hardware/: __init__.py  hardware_node.py  imu_node.py  led_interface.py  led_node.py  mecanum_kinematics.py  odometry.py  ros2_image_webserver.py  serial_interface.py  simulation_interface.py
omnibot_hardware/: __init__.py  hardware_node.py  mecanum_kinematics.py  odometry.py  serial_interface.py  simulation_interface.py
test/: test_led_interface.py  test_mecanum_kinematics.py  test_odometry.py  test_serial_interface.py  test_simulation_interface.py
