<?xml version="1.0"?>
<package format="3">
  <name>edubot_hardware</name>
  <version>0.0.1</version>
  <description>
    ROS 2 hardware interface and simulation backend for the Omnidirectional Robot.
    Provides a serial bridge for the Arduino controller and a physics-free simulation
    mode for testing without hardware.
  </description>

  <maintainer email="dev@siegler.one">Stefan Siegler</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <!-- Optional testing tools -->
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
